--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ a {
   a:focus, a:active {
     outline: none; }
 
-p, span {
+p, span, ol, li {
   margin-bottom: 1.5em;
   font-weight: 400;
   text-align: justify;
