--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1444,9 +1444,12 @@ img {
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  display: inline-block;
-  width: 300px;
-  height: 180px;
+  /* display: inline-block; */
+  width: 100%;
+  height: 15rem;
+  background-size: cover;
+  /* width: 300px;
+  height: 100%; */
 }
 
 .img-circle {
@@ -5326,9 +5329,11 @@ tbody.collapse.in {
 
 .label {
   display: inline;
-  padding: .2em .6em .3em;
-  font-size: 75%;
-  font-weight: bold;
+  padding-left: .2em;
+  padding-right: .2em;
+  font-size: 1.5rem;
+  /* font-size: 75%;
+  font-weight: bold; */
   line-height: 1;
   color: #fff;
   text-align: center;
@@ -5483,8 +5488,10 @@ a.badge:hover, a.badge:focus {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   display: inline-block;
-  width: 100%;
-  height: auto;
+  width: auto;
+  max-height: 300px;
+  /* width: 100%; */
+  /* height: auto; */
 
 }
 .thumbnail {
