--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,7 @@
 * ======================================================= */
 body {
   font-family: "Merriweather", serif;
-  line-height: 1.5;
-  font-size: 16px;
+  font-size: 2rem;
   font-weight: 400;
   background: #fafafa;
   color: black; }
@@ -23,6 +22,19 @@ body {
     position: fixed;
     height: 100%;
     width: 100%; }
+
+.text-bold{
+  color: black;
+  font-weight: bold;
+
+}
+
+.paper-block{
+  /* border-bottom: solid 1px #e0e0e0; */
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+
+}
 
 #colorlib-wrapper {
   height: 100%;
@@ -36,7 +48,8 @@ body {
 a {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
-  transition: 0.5s; }
+  transition: 0.5s; 
+  text-decoration: underline;}
   a:hover {
     text-decoration: underline;
     }
@@ -44,7 +57,6 @@ a {
     outline: none; }
 
 p, span, ol, li {
-  margin-bottom: 1.5em;
   font-weight: 400;
   text-align: justify;
   font-family: "Merriweather", serif; }
@@ -85,26 +97,37 @@ img.pub_teaser {
 span.pub_type {
 font-weight: 300;
 color: #7F7F7F;
-font-size: 14px;
+font-size: 1.5rem;
 }
 span.pub_title {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 2rem;
   color: black;
 }
 span.pub_authors {
   font-weight: 300;
-  font-size: 14px;
+  font-size: 1.5rem;
 }
 span.pub_me {
   font-weight: 500;
+  color: cadetblue;
 }
 span.pub_downloads {
 font-weight: 300;
 color: #7F7F7F;
-font-size: 12px;
+font-size: 1.3rem;
 }
 
+p.info_item{
+  font-weight: 700;
+  font-size: 1.8rem;
+}
+
+.news_item{
+  font-weight: 500;
+  font-size: 1.5rem;
+  padding-left: 10px;
+}
   #colorlib-page {
   position: relative;
   -webkit-transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -339,14 +362,13 @@ header {
     header .colorlib-navbar-brand .colorlib-logo {
       font-size: 20px;
       text-transform: uppercase;
-      color: #000;
       font-weight: 400;
       letter-spacing: 5px;
       padding: 7px;
-      border: 1px solid #000;
+      border: 1px solid cadetblue;
       display: block;
       text-align: center;
-      background: #000; }
+      background: cadetblue; }
       header .colorlib-navbar-brand .colorlib-logo span {
         display: block;
         margin-bottom: 0;
@@ -358,9 +380,6 @@ header {
         outline: none;
         text-decoration: none; }
 
-#project,
-#award,
-#publication,
 #colorlib-contact,
 #colorlib-work,
 #blog,
@@ -368,22 +387,18 @@ header {
 #colorlib-progress,
 #colorlib-contact,
 #about {
-  padding: 11em 0 0 0;
-  margin-top:5em;
+  padding: 3em 0 0 0;
   clear: both;
   position: relative; }
   @media screen and (max-width: 768px) {
-    #project,
-    #publication,
     #colorlib-contact,
     #colorlib-work,
     #blog,
     #colorlib-testimony,
     #colorlib-progress,
     #colorlib-contact,
-    #award
     #about {
-      padding: 11em 0 0 0; } }
+      padding: 3em 0 0 0; } }
 
 .rotate {
   position: absolute;
@@ -415,7 +430,7 @@ header {
       height: 1px; }
 
 .about-desc {
-  padding-top: 3em; }
+  padding-top: 0em; }
   .about-desc h2 {
     line-height: 1.3; }
     .about-desc h2 span {
@@ -454,6 +469,39 @@ header {
         width: 40px;
         height: 1px; }
 
+.sec-title{
+  padding-left: 2rem;
+  font-size:4rem;
+  color: #f0f0f0;
+  background-color: cadetblue;
+  height: 30%;
+  font-weight: 700; }
+
+.page-head{
+  color: cadetblue;
+  font-size: 8rem;
+  font-weight: 700; }
+
+.colorlib-logo {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 5px;
+    padding: 7px;
+    border: 1px solid cadetblue;
+    display: block;
+    text-align: center;
+    color: #fff;
+    background: cadetblue; 
+    width: 100px;
+  }
+
+.colorlib-logo span {
+    display: block;
+    margin-bottom: 0;
+    line-height: 1.2;
+    color: #fff; }
+
 .bold {
   position: absolute;
   top: 0;
@@ -465,6 +513,17 @@ header {
   @media screen and (max-width: 768px) {
     .bold {
       font-size: 60px; } }
+
+.img-person{
+        padding: 1px;
+        line-height: 1.42857;
+        -webkit-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+        display: inline-block;
+        width: auto;
+        max-height: 300px;     
+}
 
 .intro-heading {
   margin-bottom: 3em; }
@@ -1345,7 +1404,7 @@ input[type="text"] {
     -ms-border-radius: 30px;
     border-radius: 30px; }
 .footer-news{
-  font-size: 13px;
+  font-size: 1.3rem;
   color:#282C34
 }
 .js .animate-box {
